--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>CSI3150 In Class Assignment 3</title>
+    <title>IN CLASS 3 - ASSIGNMENT CSI 3150</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
